[gd_scene load_steps=3 format=3 uid="uid://d1ndol6401brv"]

[ext_resource type="Script" uid="uid://dgjlms88gomet" path="res://scripts/game.gd" id="1_r67kn"]
[ext_resource type="Theme" uid="uid://cq0m3bxrr77sk" path="res://themes/theme.tres" id="2_brbbq"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r67kn")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme = ExtResource("2_brbbq")

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Question" type="Label" parent="Background/MarginContainer/Rows"]
custom_minimum_size = Vector2(50, 200)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_brbbq")
text = "Question"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Button1" type="Button" parent="Background/MarginContainer/Rows/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 80
text = "Option 1"
autowrap_mode = 3

[node name="Button2" type="Button" parent="Background/MarginContainer/Rows/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 80
text = "Option 2"
autowrap_mode = 3

[node name="Button3" type="Button" parent="Background/MarginContainer/Rows/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 80
text = "Option 3"
autowrap_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_brbbq")

[node name="TimerPanel" type="Panel" parent="Background/MarginContainer/Rows/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ColorRect" type="ColorRect" parent="Background/MarginContainer/Rows/PanelContainer/TimerPanel"]
layout_mode = 1
offset_top = 5.0
offset_right = 1000.0
offset_bottom = 25.0
color = Color(0, 0.862745, 0.494118, 1)

[node name="Result" type="Label" parent="Background/MarginContainer/Rows/PanelContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_brbbq")
text = "Time up"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ExitButton" type="Button" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 10
focus_mode = 0
theme_type_variation = &"RoundButton"
text = "Exit"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Background/MarginContainer/Rows/GridContainer/Button1" to="." method="_on_option_button_pressed" binds= [1]]
[connection signal="pressed" from="Background/MarginContainer/Rows/GridContainer/Button2" to="." method="_on_option_button_pressed" binds= [2]]
[connection signal="pressed" from="Background/MarginContainer/Rows/GridContainer/Button3" to="." method="_on_option_button_pressed" binds= [3]]
[connection signal="pressed" from="Background/MarginContainer/Rows/ExitButton" to="." method="_on_exit_button_pressed"]
